# ChatDoctor_Assistant

./: .gitignore  README.md  compass-connections.json
datasets/: README.md
models/: README.md
source/: .env  chatdoctor_assistant_app.py  cohere_with_langchain.ipynb  finetuning_MedPalm2_question_answering.ipynb  preprocessing_datasets.ipynb  pyproject.toml  setup.py  test_MedPalm2.ipynb  test_cohere.ipynb
source/datasets_preprocessing/: datasets_preprocessing.ipynb
source/finetuning_llm/: fine-tuning_llm_model.ipynb
source/prompts/: question_answering_prompt.py
source/test/: cohere_with_langchain.ipynb  finetuning_MedPalm2_text_generation.ipynb  test_cohere.ipynb  test_mongodb.ipynb
source/utils/: functions.txt
